--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,12 @@ importlib-metadata==7.0.1
 install==1.3.5
 iso-639==0.4.5
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.1.3
 macholib==1.16.3
 MarkupSafe==2.1.3
 modulegraph==0.19.6
 packaging==23.2
-Pillow==10.0.1
+pillow==10.3.0
 py2app==0.28.7
 pyinstaller==6.0.0
 pyinstaller-hooks-contrib==2023.9
@@ -37,8 +37,8 @@ redis==5.0.1
 requests==2.31.0
 six==1.16.0
 typing_extensions==4.8.0
-urllib3==2.0.6
-Werkzeug==3.0.0
+urllib3==2.2.1
+Werkzeug==3.0.2
 whichcraft==0.6.1
 zipp==3.17.0
 zope.event==5.0
